packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__let x  = ((1 __ 1)) __ ((1 + 1)).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca double, align 8
  store double 5.000000e-01, double* %x_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

